# new_vpn

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  config.py  docker-compose.yml  main.py  orm_main.py  pyproject.toml  requirements.txt  КККККREADME.md
alembic/: env.py
alembic/versions/: 0001_initial.py
app/: __init__.py  config.py  db.py  logging.py  main.py  migrations_runner.py  models.py  repositories.py  services.py  wireguard.py
app/bot/: __init__.py  callbacks.py  filters.py  keyboards.py  middleware.py
app/bot/handlers/: __init__.py  admin.py  common.py  user_keys.py
data/: bot.db  db.py  models.py  repo.py
deploy/nginx/: Dockerfile  entrypoint.sh  vpppn.conf.example
deploy/nginx/conf.d/: vpppn.conf.template
docs/: DEPLOY.md
etc/xray/: config.dev.json  config.json
filters/: admin.py
handlers/: __init__.py  keyboards.py  keys.py  new_key.py  start.py  states.py
scripts/: bootstrap.sh  bootstrap_server.sh  install_xray_service.py  nginx_certbot_setup.sh  preflight_check.sh  setup_ubuntu.py  wg_peer_add.sh  wg_server_init.sh
services/: scheduler.py  xray_client.py  xray_configurator.py
tests/: conftest.py  test_xray_client.py
