[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vpppn"
version = "0.1.0"
description = "Telegram-бот для управления VLESS-ключами и конфигурацией XRay."
authors = [{name = "Ibragim"}]
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.3.0,<4.0.0",
    "pydantic-settings>=2.3.0,<3.0.0",
    "sqlalchemy[asyncio]>=2.0.0,<3.0.0",
    "aiosqlite>=0.19.0,<1.0.0",
    "asyncpg>=0.28.0,<1.0.0",
    "apscheduler>=3.10.4,<4.0.0",
    "qrcode[pil]>=7.4.0,<8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<8.0.0",
    "ruff>=0.1.0",
]

[tool.setuptools]
packages = ["handlers", "services", "data"]
py-modules = ["main", "orm_main", "config"]
